css omni-fix
key entries use vertical explainer (HexValExplainer) when too long
remove console.logs
move styling rules to KVEntryExplainer.css

--- a/src/ExplainerStructure/MagicBytesExplainer.css
+++ b/src/ExplainerStructure/MagicBytesExplainer.css
@@ -16,8 +16,3 @@ ul li {
   margin: 8px 16px 12px 16px;
   max-width: 768px;
 }
-
-.empty-value-explanation {
-  margin: 8px 16px 12px 16px;
-  min-width: 768px;
-}
